first init showcase

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 </li>
             </ul>
         </nav>
-    </div>
 
+        <!-- Showcase -->
+        
+    </div>
     <script src="https://kit.fontawesome.com/b26a426235.js" crossorigin="anonymous"></script>
 </body>
 </html>
