finish button style in showcase

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
         </nav>
 
         <!-- Showcase -->
+        <header class="showcase">
+            <h2>Surface Deals</h2>
+            <p>
+                Select Surfaces are on sale now - save while supplies last
+            </p>
+            <a href="#" class="btn"><i class="fas fa-chevron-right"></i></a>
+        </header>
         
     </div>
     <script src="https://kit.fontawesome.com/b26a426235.js" crossorigin="anonymous"></script>
