finish showcase and btn in showcase

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>
                 Select Surfaces are on sale now - save while supplies last
             </p>
-            <a href="#" class="btn"><i class="fas fa-chevron-right"></i></a>
+            <a href="#" class="btn">Shop Now <i class="fas fa-chevron-right"></i></a>
         </header>
         
     </div>
