add xbox section

--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
             </div>
         </section>
 
+        <!-- Xbox -->
+        <section class="xbox">
+            <div class="content">
+                <h2>Xbox Game Pass Ultimate</h2>
+                <p>Xbox Game Pass Ultimate Xbox Live Gold and over 100 high-quality console and PC games. Play together with friends and discover your next favorite game.</p>
+                <a href="#" class="btn">Join Now <i class="fas fa-checron-right"></i></a>
+            </div>
+        </section>
+
     </div>
     <script src="https://kit.fontawesome.com/b26a426235.js" crossorigin="anonymous"></script>
 </body>
