carbon html and css

--- a/index.html
+++ b/index.html
@@ -110,6 +110,15 @@
             </div>
         </section>
 
+        <!-- Carbon -->
+        <section class="carbon dark">
+            <div class="content">
+                <h2>Commiting To Carbon Negative</h2>
+                <p>Microsoft will be carbon negative by 2030 and by 2050 we will remove all carbon the company has emitted since it was founded in 1975.</p>
+                <a href="#" class="btn">Learn More <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </section>
+
     </div>
     <script src="https://kit.fontawesome.com/b26a426235.js" crossorigin="anonymous"></script>
 </body>
