follow section html

--- a/index.html
+++ b/index.html
@@ -119,6 +119,19 @@
             </div>
         </section>
 
+        <section class="follow">
+            <p>Follow Microsoft</p>
+            <a href="https://facebook.com">
+                <img src="./img/social-fb.png" alt="Facebook">
+            </a>
+            <a href="https://twitter.com">
+                <img src="./img/social-twitter.png" alt="Twitter">
+            </a>
+            <a href="https://linkedin.com">
+                <img src="./img/social-linkedin.png" alt="Linkedin">
+            </a>
+        </section>
+
     </div>
     <script src="https://kit.fontawesome.com/b26a426235.js" crossorigin="anonymous"></script>
 </body>
