--- a/index.html
+++ b/index.html
@@ -187,6 +187,23 @@
             </div>
         </section>
 
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="footer-inner">
+                <div><i class="fas fa-globe fa-2x"></i> English (United States)</div>
+            </div>
+            <ul>
+                <li><a href="#">Sitemap</a></li>
+                <li><a href="#">Contact Microsoft</a></li>
+                <li><a href="#">Privacy & cookies</a></li>
+                <li><a href="#">Terms of use</a></li>
+                <li><a href="#">Trademarks</a></li>
+                <li><a href="#">Safety & eco</a></li>
+                <li><a href="#">About our ads</a></li>
+                <li><a href="#">&copy; Microsoft 2020</a></li>
+            </ul>
+        </footer>
+
     <script src="https://kit.fontawesome.com/b26a426235.js" crossorigin="anonymous"></script>
 </body>
 </html>
