--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="menu-btn">
+        <i class="fas fa-bars fa-2x"></i>
+    </div>
+
     <div class="container">
         <!-- Nav -->
         <nav class="main-nav">
@@ -203,6 +207,11 @@
             </ul>
             </div>
         </footer>
+
+
+        <script>
+            document.querySelector('.menu-btn').addEventListener('click', () => document.querySelector('.main-menu').classList.toggle('show'));
+        </script>
 
     <script src="https://kit.fontawesome.com/b26a426235.js" crossorigin="anonymous"></script>
 </body>
